--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     
     <input type=hidden name="oid" value="00D5g00000KBUCy">
 
-    <input type=hidden name="retURL" value="">
+    <input type=hidden name="retURL" value="https://discover1234.github.io/Web-to-Lead-Bootcamp/thanks.html">
     
     <input type=hidden name="Lead_Date__c" class ="outputDate"/>
 
