--- a/index.html
+++ b/index.html
@@ -29,7 +29,9 @@
     
     <label for="Lead Date">Lead Date</label><input type="date" required ="true" class = "inputDate"/><br/>
     <!-- Lead Date:<span class="dateInput dateOnlyInput"><input  id="00NJ1000000yuFF" name="00NJ1000000yuFF" size="12" type="text" /></span><br> -->
-    <div class="g-recaptcha" data-sitekey="6LfPIAkqAAAAABnocapELSMK1ylpJPdmxOT66CAG" data-callback="captchasuccess"></div><br>
+    <div class="g-recaptcha" 
+    data-sitekey="6LfPIAkqAAAAABnocapELSMK1ylpJPdmxOT66CAG" 
+    data-callback="captchasuccess()"></div><br>
 
     <input type="submit" name="submit" class="submit">
     
