--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <!-- Lead Date:<span class="dateInput dateOnlyInput"><input  id="00NJ1000000yuFF" name="00NJ1000000yuFF" size="12" type="text" /></span><br> -->
     <div class="g-recaptcha" 
     data-sitekey="6LfPIAkqAAAAABnocapELSMK1ylpJPdmxOT66CAG" 
-    data-callback="captchasuccess()"></div><br>
+    data-callback="captchasuccess"></div><br>
 
     <input type="submit" name="submit" class="submit">
     
