--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     
     <label for="email">Email</label><input  id="email" maxlength="80" name="email" size="20" type="text" required ="true"/><br>
     
-    <label for="Lead Date">Lead Date</label><input type="date" required ="true" class = "inputDate"/><br/>
+    <label for="Lead_Date">Lead Date</label><input type="date" required ="true" class = "inputDate"/><br/>
     <!-- Lead Date:<span class="dateInput dateOnlyInput"><input  id="00NJ1000000yuFF" name="00NJ1000000yuFF" size="12" type="text" /></span><br> -->
     <div class="g-recaptcha" 
     data-sitekey="6LfPIAkqAAAAABnocapELSMK1ylpJPdmxOT66CAG" 
