event default changes

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <h1>Create Lead</h1>
     <form action="https://webto.salesforce.com/servlet/servlet.WebToLead?encoding=UTF-8&orgId=00D5g00000KBUCy" method="POST" 
-    onsubmit="beforeSubmit();">
+    onsubmit="beforeSubmit(event);">
 
     <input type=hidden name='captcha_settings' value='{"keyname":"Web_to_Lead_Bootcamp","fallback":"true","orgId":"00D5g00000KBUCy","ts":""}'>
     
